tests/cases/should_fail/patterns/incomplere_exclusive_range_pat.stderr
error: expected an arrow `=>` 
 --> $DIR/incomplere_exclusive_range_pat.hash:3:10
2 |       match k {
3 |           1..< => {};
  |            ^ here
4 |       }
